; ModuleID = '/home/carl/AnghaBench/freebsd/sys/compat/freebsd32/extr_freebsd32_misc.c_freebsd32_ktimer_gettime.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/compat/freebsd32/extr_freebsd32_misc.c_freebsd32_ktimer_gettime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thread = type { i32 }
%struct.freebsd32_ktimer_gettime_args = type { i32, i32 }
%struct.itimerspec32 = type { i32 }
%struct.itimerspec = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @freebsd32_ktimer_gettime(%struct.thread* %0, %struct.freebsd32_ktimer_gettime_args* %1) #0 {
  %3 = alloca %struct.thread*, align 8
  %4 = alloca %struct.freebsd32_ktimer_gettime_args*, align 8
  %5 = alloca %struct.itimerspec32, align 4
  %6 = alloca %struct.itimerspec, align 4
  %7 = alloca i32, align 4
  store %struct.thread* %0, %struct.thread** %3, align 8
  store %struct.freebsd32_ktimer_gettime_args* %1, %struct.freebsd32_ktimer_gettime_args** %4, align 8
  %8 = load %struct.thread*, %struct.thread** %3, align 8
  %9 = load %struct.freebsd32_ktimer_gettime_args*, %struct.freebsd32_ktimer_gettime_args** %4, align 8
  %10 = getelementptr inbounds %struct.freebsd32_ktimer_gettime_args, %struct.freebsd32_ktimer_gettime_args* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @kern_ktimer_gettime(%struct.thread* %8, i32 %11, %struct.itimerspec* %6)
  store i32 %12, i32* %7, align 4
  %13 = load i32, i32* %7, align 4
  %14 = icmp eq i32 %13, 0
  br i1 %14, label %15, label %25

15:                                               ; preds = %2
  %16 = getelementptr inbounds %struct.itimerspec, %struct.itimerspec* %6, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = getelementptr inbounds %struct.itimerspec32, %struct.itimerspec32* %5, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @ITS_CP(i32 %17, i32 %19)
  %21 = load %struct.freebsd32_ktimer_gettime_args*, %struct.freebsd32_ktimer_gettime_args** %4, align 8
  %22 = getelementptr inbounds %struct.freebsd32_ktimer_gettime_args, %struct.freebsd32_ktimer_gettime_args* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @copyout(%struct.itimerspec32* %5, i32 %23, i32 4)
  store i32 %24, i32* %7, align 4
  br label %25

25:                                               ; preds = %15, %2
  %26 = load i32, i32* %7, align 4
  ret i32 %26
}

declare dso_local i32 @kern_ktimer_gettime(%struct.thread*, i32, %struct.itimerspec*) #1

declare dso_local i32 @ITS_CP(i32, i32) #1

declare dso_local i32 @copyout(%struct.itimerspec32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
